Ajuste no posicionamento da section Redes Sociais em Contato
- Fiz com que ambas as sections ficassem com a esquerda de suas caixas alinhadas verticalmente na tela com width: 599px - 768px.

--- a/style/contato.css
+++ b/style/contato.css
@@ -268,6 +268,11 @@ a.contentIcon span{
     p{
         height: fit-content;
     }
+
+    /* Section Redes Sociais */
+    section:nth-child(2){
+        width: 475px;
+    }
 }
 @media only screen and (min-width: 769px) and (max-width: 918px) {
     main{
