--- a/style/base.css
+++ b/style/base.css
@@ -45,7 +45,6 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
     background: linear-gradient(90deg,rgba(24, 34, 101, 1) 8%, rgba(98, 118, 212, 1) 42%, rgba(97, 34, 165, 1) 100%);
 }
 
@@ -100,7 +99,7 @@ a.nav-nome{
 .icon-menuHeader{
     cursor: pointer;
     display: none;
-    font-size: 30px;
+    font-size: 35px;
     color: var(--branco);
 }
 
@@ -167,9 +166,8 @@ footer p{
     /* Header */
     nav{
         height: fit-content;
-        padding: 15px 0;
         flex-direction: column;
-        gap: 15px;
+        gap: 0;
     }
 
     /* Div que engloba o nome e o menu hamburguer do header */
@@ -177,6 +175,7 @@ footer p{
         width: 100%;
         display: flex;
         justify-content: space-around;
+        padding: 15px 0;
     }
 
     /* Container que engloba os itens de navegação da nav */
@@ -189,17 +188,17 @@ footer p{
     .nav-containerItens ul{
         flex-direction: column;
         gap: 0;
+        border: 3px solid var(--branco);
     }
 
     /* Itens de navegação da nav */
     .nav-containerItens li{
-        border: 1px solid var(--preto);
+        border: 1px solid var(--branco);
         text-align: center;
         font-size: 20px;
-        padding: 15px 10px;
+        padding: 25px 10px;
         width: 100%;
         transition: 300ms;
-        background-color: var(--lilas);
     }
 
     .nav-containerItens li:active{
@@ -219,32 +218,39 @@ footer p{
     /* Header */
     nav{
         height: fit-content;
-        padding: 15px 0;
         flex-direction: column;
-        gap: 30px;
+        gap: 0;
     }
 
     /* Div que engloba o nome e o menu hamburguer do header */
     div.nomeIcone{
         width: 100%;
+        padding: 15px 0;
         display: flex;
         justify-content: space-around;
     }
 
     /* Container que engloba os itens de navegação da nav */
     .nav-containerItens{
+        width: 100%;
+        border: 3px solid var(--branco);
         display: none; 
     }
 
     /* Lista dos itens de navegação da nav */
     .nav-containerItens ul{
-        gap: 10px;
+        flex-direction: column;
+        gap: 0;
     }
 
     /* Itens de navegação da nav */
     .nav-containerItens li{
+        border: 1px solid var(--branco);
+        text-align: center;
         font-size: 20px;
-        padding: 20px;
+        padding: 25px 10px;
+        width: 100%;
+        transition: 300ms;
     }
 
 
