Adição de animação na main de Projetos
Obs: Em "Projetos menos" a animação está pegando também, mas terá um ajuste para só ativar a animação nessa parte apenas quando scrollar para baixo e tiver aparecendo.

--- a/style/keyframes.css
+++ b/style/keyframes.css
@@ -19,3 +19,15 @@
         opacity: 1;
     }
 }
+
+/* Título da section em Projetos */
+@keyframes tituloParaDireita {
+    from{ 
+        transform: translateX(-80%);
+        opacity: 0;
+    }
+    to { 
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
