--- a/style/home.css
+++ b/style/home.css
@@ -1,8 +1,6 @@
 @import url(base.css);
 @import url(keyframes.css);
 
-
-
 main{
     display: flex;
     align-items: center;
@@ -58,6 +56,7 @@ section.mainParte1 button{
 section.mainParte1 button:hover{
     color: var(--branco);
     background-color: var(--ciano-medio);
+    animation:jello-vertical .9s both;
 }
 
 section.mainParte2{
