--- a/style/contato.css
+++ b/style/contato.css
@@ -1,4 +1,5 @@
 @import url(base.css);
+@import url(keyframes.css);
 
 *{
     font-family: var(--robotoCondesed);
@@ -39,6 +40,7 @@ form{
     display: flex;
     flex-direction: column;
     background-color: var(--azul-acinzentado);
+    -webkit-animation:scale-up-center 1s cubic-bezier(.39,.575,.565,1.000) both;animation:scale-up-center 1s cubic-bezier(.39,.575,.565,1.000) both;
 }
 
 /* Label do form */
@@ -87,6 +89,7 @@ form button{
 
 form button:hover{
     background-color: var(--ciano-claro);
+    animation: jello-vertical 1s both;
 }
 
 /* Nome + Email */
@@ -147,6 +150,7 @@ a.contentIcon{
     box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 50%);
     background-color: rgba(128, 128, 128, 20%);
     transition: 200ms;
+    -webkit-animation: scale-up-center 1s cubic-bezier(.39,.575,.565,1.000) both;animation:scale-up-center 1s cubic-bezier(.39,.575,.565,1.000) both;
 }
 
 a.contentIcon:hover{
